force-app/main/default/objects/Error_Log__c/fields/ApexName__c.field-meta.xml
<CustomField>
    <fullName>ApexName__c</fullName>
    <label>ApexName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>