force-app/main/default/objects/Error_Log__c/fields/CpuTime__c.field-meta.xml
<CustomField>
    <fullName>CpuTime__c</fullName>
    <label>CpuTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>