force-app/main/default/objects/Error_Log__c/fields/FailCount__c.field-meta.xml
<CustomField>
    <fullName>FailCount__c</fullName>
    <label>FailCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>