force-app/main/default/objects/Error_Log__c/fields/InterfaceId__c.field-meta.xml
<CustomField>
    <fullName>InterfaceId__c</fullName>
    <label>Interface Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>