force-app/main/default/objects/Error_Log__c/fields/LogType__c.field-meta.xml
<CustomField>
    <fullName>LogType__c</fullName>
    <label>LogType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>