force-app/main/default/objects/Error_Log__c/fields/RequestMessage__c.field-meta.xml
<CustomField>
    <fullName>RequestMessage__c</fullName>
    <label>RequestMessage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>