force-app/main/default/objects/Error_Log__c/fields/TotalCount__c.field-meta.xml
<CustomField>
    <fullName>TotalCount__c</fullName>
    <label>TotalCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>